# markerr

./: README.md
markerr/: .gitignore  Procfile  pyproject.toml  requirements.txt  wsgi.py
markerr-client/: README.md  package-lock.json  package.json  preact.config.js
markerr-client/src/: history.js  index.js  template.html
markerr-client/src/annotator/: annotator.css  annotator.jsx  api.js  store.js  utils.js
markerr-client/src/components/: icons.jsx
markerr-client/src/components/comment/: comment.css  comment.jsx
markerr-client/src/components/comments/: comments.jsx
markerr-client/src/components/element/: element.jsx
markerr-client/src/components/highlighter/: highlighter.jsx
markerr-client/src/components/login/: login.jsx
markerr-client/src/components/replies/: replies.jsx
markerr-client/src/components/selector/: selector.jsx
markerr-client/src/components/signup/: signup.css  signup.jsx
markerr-client/src/components/site/: site.jsx
markerr-client/src/style/: buttons.css  index.css  reset.css  theme.css
markerr/markerr/: app.py  config.py
markerr/markerr/auth/: __init__.py  error_handlers.py  supertoken_apis_override.py
markerr/markerr/cli/: __init__.py  initdb.py  user.py
markerr/markerr/db/: __init__.py  mixins.py
markerr/markerr/models/: __init__.py  annotation.py  comment.py  site.py  team.py  user.py
markerr/markerr/views/: comments.py  pages.py  sites.py  users.py
markerr/tests/: test_annotator.py
