[tool.poetry]
name = "markerr"
version = "0.5.0"
description = ""
authors = ["Faraaz Biyabani <faraazb@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
WTForms = {extras = ["email"], version = "^3.0.1"}
WTForms-JSON = "^0.3.5"
supertokens-python = "^0.10.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
